fix top padding on mobile

--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -2,6 +2,10 @@
 	max-width: 1440px;
 	margin: 6.4rem auto;
 	padding: 2.4rem;
+
+	@include respond(bp600) {
+		padding-top: 1rem;
+	}
 }
 
 .section {
